<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrettyPrintActivity">

    <TextView
        android:id="@+id/phonebillListTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="11dp"
        android:layout_weight="1"
        android:text="@string/pretty_prints_phone_bill"
        app:layout_constraintBottom_toTopOf="@+id/pPrintGoToMainButton"
        app:layout_constraintEnd_toEndOf="@+id/pPrintButton"
        app:layout_constraintStart_toStartOf="@+id/pPrintCNameText"
        app:layout_constraintTop_toBottomOf="@+id/pPrintCNameText" />

    <EditText
        android:id="@+id/pPrintCNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="71dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/customer_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pPrintButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/phonebillListTextView"
        app:layout_constraintStart_toEndOf="@+id/pPrintCNameText" />

    <Button
        android:id="@+id/pPrintGoToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="107dp"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
